chore: bump maven.compiler.release to 25 and update CLAUDE.md
- Bump maven.compiler.release from 17 to 25 to match JDK 25 runtime target
- Update CLAUDE.md with deployment (k8s/Helm), CI/CD workflows, Dockerfiles,
  missing base modules, QUIC handler details, and batching patterns